add Danish def file

--- a/src/europasscv_en.tex
+++ b/src/europasscv_en.tex
@@ -2,7 +2,7 @@
 % !TEX program = pdflatex
 % !TEX spellcheck = en_GB
 
-\documentclass[english,a4paper]{europasscv}
+\documentclass[english,a4paper,danish]{europasscv}
 \usepackage[english]{babel}
 
 \ecvname{Betty Smith}
@@ -30,10 +30,11 @@
   \ecvpersonalinfo
 
   \ecvbigitem{Job applied for}{European project manager}
+%   \ecvitem[50pt]{ciao}{Prova}
 
   \ecvsection{Work experience}
   
-  \ecvtitle{August 2002 -- Present}{Independent consultant}
+  \ecvtitle[20pt]{August 2002 -- Present}{Independent consultant}
   \ecvitem{}{British Council\newline 123, Bd Ney, 75023 Paris (France)}
   \ecvitem{}{Evaluation of European Commission youth training support measures for youth national agencies and young people}
    
